add macos apple scilicon

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,11 +60,16 @@ jobs:
           go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
         if: runner.os == 'Linux'
 
-      - name: Build For MacOS
+      - name: Build For MacOS Intel
         run: |
           go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
         if: runner.os == 'macOS'
 
+      - name: Build For MacOS Apple Scilicon
+        run: |
+          go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'macOS'  
+        
       - name: Build For Windows
         run: |
           go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o ./yak_windows_amd64.exe -v common/yak/cmd/yak.go
@@ -78,13 +83,19 @@ jobs:
           path: ./yak_windows_amd64.exe
 
 
-      - name: Upload Artifacts MacOS
+      - name: Upload Artifacts MacOS Intel
         uses: actions/upload-artifact@v2
         if: runner.os == 'macOS'
         with:
           name: yak_darwin_amd64
           path: ./yak_darwin_amd64
 
+      - name: Upload Artifacts MacOS Apple Scilicon
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'macOS'
+        with:
+          name: yak_darwin_arm64
+          path: ./yak_darwin_arm64
 
       - name: Upload Artifacts Linux
         uses: actions/upload-artifact@v2
@@ -118,10 +129,14 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: yak_windows_amd64.exe
-      - name: Download macOS YAK
+      - name: Download macOS Intel YAK
         uses: actions/download-artifact@v2
         with:
           name: yak_darwin_amd64
+      - name: Download macOS Apple Scilicon YAK
+        uses: actions/download-artifact@v2
+        with:
+          name: yak_darwin_arm64
       - name: Download Linux YAK
         uses: actions/download-artifact@v2
         with:
@@ -172,6 +187,8 @@ jobs:
             yak_linux_amd64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_linux_amd64
             yak_darwin_amd64:/yak/latest/yak_darwin_amd64
             yak_darwin_amd64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_darwin_amd64
+            yak_darwin_amd64:/yak/latest/yak_darwin_arm64
+            yak_darwin_amd64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_darwin_arm64
       #      - name: Upload Yakit to oss(MacOS m1)
       #        uses: tvrcgo/upload-to-oss@master
       #        with:
@@ -252,7 +269,7 @@ jobs:
           asset_name: yak_linux_amd64
           asset_content_type: application/octet-stream
 
-      - name: Upload Release Asset macOS
+      - name: Upload Release Asset macOS Intel
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -260,6 +277,16 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./yak_darwin_amd64
           asset_name: yak_darwin_amd64
+          asset_content_type: application/octet-stream
+
+      - name: Upload Release Asset macOS Apple Scilicon
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./yak_darwin_arm64
+          asset_name: yak_darwin_arm64
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset Windows
