--- a/.github/workflows/manualdist.yml
+++ b/.github/workflows/manualdist.yml
@@ -58,10 +58,13 @@ jobs:
           go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
         if: runner.os == 'Linux'
 
-      - name: Build For MacOS
+      - name: Build For MacOS Intel
         run: |
-          go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'macOS'
+          CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+
+      - name: Build For MacOS Apple Scilicon
+        run: |
+          CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
 
       - name: Build For Windows
         run: |
@@ -75,12 +78,19 @@ jobs:
           name: yak_windows_amd64.exe
           path: ./yak_windows_amd64.exe
 
-      - name: Upload Artifacts MacOS
+      - name: Upload Artifacts MacOS Intel
         uses: actions/upload-artifact@v2
         if: runner.os == 'macOS'
         with:
           name: yak_darwin_amd64
           path: ./yak_darwin_amd64
+  
+      - name: Upload Artifacts MacOS Apple Scilicon
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'macOS'
+        with:
+          name: yak_darwin_arm64
+          path: ./yak_darwin_arm64
 
 
       - name: Upload Artifacts Linux
