--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -15,15 +15,20 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Test JSONExtractor / Codec / Cartesian / JsonPath / Domain Extractor / Fuzztag
+          - name: Test JSONExtractor / Codec / Cartesian / JsonPath / Domain Extractor / Fuzztag / TLS / CVE / SCA / NETX
             run: |
-              go test -timeout 1m ./common/jsonextractor -v
-              go test -timeout 1m ./common/yak/yaklib/codec -v
-              go test -timeout 1m ./common/yak/cartesian -v
-              go test -timeout 1m ./common/jsonpath -v
-              go test -timeout 1m ./common/domainextractor -v
-              go test -timeout 1m ./common/mutate_tests ./common/fuzztag -v
-              go test -timeout 1m ./common/utils -v
+              # these tests are very quick
+              go test -timeout 20s ./common/jsonextractor -v
+              go test -timeout 20s ./common/yak/yaklib/codec -v
+              go test -timeout 20s ./common/yak/cartesian -v
+              go test -timeout 20s ./common/jsonpath -v
+              go test -timeout 20s ./common/domainextractor -v
+              go test -timeout 20s ./common/mutate_tests ./common/fuzztag -v
+              go test -timeout 20s ./common/utils -v
+              go test -timeout 20s ./common/utils/tlsutils/...
+              go test -timeout 20s -run TestQueryCVEWithFixName ./common/cve -v
+              go test -timeout 20s ./common/sca/... -v
+              go test -timeout 20s ./common/netx/mustpass -v
 
           - name: Test lowhttp
             run: go test -timeout 1m ./common/utils/lowhttp -v
@@ -61,16 +66,8 @@ jobs:
           - name: Test gRPC TestGRPCMUSTPASS_OPEN_REDIRECT
             run: go test -timeout 1m -run TestGRPCMUSTPASS_OPEN_REDIRECT ./common/coreplugin -v
 
-          - name: Test CVEQuery / SCA
-            run: | 
-              go test -timeout 1m -run TestQueryCVEWithFixName ./common/cve -v
-              go test -timeout 1m ./common/sca/... -v
-
           - name: Test Vulinbox agent client
             run: go test -timeout 1m ./common/vulinboxagentclient -v
-
-          - name: Test YakDNS(DoH / TCP / UDP)
-            run: go test -timeout 20s ./common/netx/mustpass -v
 
           - name: Test Suricata Generate && Match
             run: |
