--- a/.github/workflows/manualdist.yml
+++ b/.github/workflows/manualdist.yml
@@ -12,8 +12,10 @@ jobs:
       matrix:
         os:
           - windows-latest
-          - macos-latest
+          - macos-amd64
+          - macos-arm64
           - ubuntu-20.04
+          - ubuntu-20.04-arm64
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -28,9 +30,9 @@ jobs:
         run: |
           echo "github actions's env VERSION: ${{ steps.fetchtag.outputs.value }}"
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.20.3
+          go-version-file: './go.mod'
       #      - name: Download Npcap SDK (Windows)
       #        run: |
       #          Invoke-WebRequest https://nmap.org/npcap/dist/npcap-sdk-1.07.zip -OutFile C:\NpcapSDK.zip
@@ -53,15 +55,25 @@ jobs:
       - name: Initialize License Machine
         run: go run common/xlic/cmd/initializer.go --ak ${{ secrets.OSS_KEY_ID }} --sk ${{ secrets.OSS_KEY_SECRET }}
 
-      - name: Build For Linux
+      - name: Build For Linux (AMD64)
         run: |
           go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && env.GOARCH == 'amd64'
 
-      - name: Build For MacOS
+      - name: Build For Linux (ARM64)
+        run: |
+          go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'Linux' && env.GOARCH == 'amd64'
+
+      - name: Build For MacOS (Intel)
         run: |
           go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && env.GOARCH == 'amd64'
+
+      - name: Build For MacOS (Apple Silicon)
+        run: |
+          go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'macOS' && env.GOARCH == 'arm64'
 
       - name: Build For Windows
         run: |
@@ -77,10 +89,17 @@ jobs:
 
       - name: Upload Artifacts MacOS
         uses: actions/upload-artifact@v2
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && env.GOARCH == 'amd64'
         with:
           name: yak_darwin_amd64
           path: ./yak_darwin_amd64
+
+      - name: Upload Artifacts MacOS(arm64)
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'macOS' && env.GOARCH == 'arm64'
+        with:
+          name: yak_darwin_arm64
+          path: ./yak_darwin_arm64
 
 
       - name: Upload Artifacts Linux
@@ -89,3 +108,10 @@ jobs:
         with:
           name: yak_linux_amd64
           path: ./yak_linux_amd64
+
+      - name: Upload Artifacts Linux(arm64)
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'Linux' && env.GOARCH == 'arm64'
+        with:
+          name: yak_linux_arm64
+          path: ./yak_linux_arm64
