--- a/.github/workflows/linuxdist.yml
+++ b/.github/workflows/linuxdist.yml
@@ -12,6 +12,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+          - ubuntu-arm64
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -48,11 +49,23 @@ jobs:
       - name: Build For Linux
         run: |
           go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && runner.arch == 'X64'
+      
+      - name: Build For Linux Arm
+        run: |
+          go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'Linux' && runner.arch == 'ARM64'
 
       - name: Upload Artifacts Linux
         uses: actions/upload-artifact@v2
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && runner.arch == 'X64'
         with:
           name: yak_linux_amd64
           path: ./yak_linux_amd64
+
+      - name: Upload Artifacts Linux Arm
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'Linux' && runner.arch == 'ARM64'
+        with:
+          name: yak_linux_arm64
+          path: ./yak_linux_arm64
