--- a/.github/workflows/manualdist.yml
+++ b/.github/workflows/manualdist.yml
@@ -13,7 +13,9 @@ jobs:
         os:
           - windows-latest
           - macos-latest
+          - macos-arm
           - ubuntu-20.04
+          - ubuntu-20.04-arm
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -56,15 +58,22 @@ jobs:
       - name: Build For Linux
         run: |
           go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && runner.arch == 'X64'
+
+      - name: Build For Linux Arm
+        run: |
+          go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'Linux' && runner.arch == 'ARM64'
 
       - name: Build For MacOS Intel
         run: |
           CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'macOS' && runner.arch == 'X64'
 
       - name: Build For MacOS Apple Scilicon
         run: |
           CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'macOS' && runner.arch == 'ARM64'
 
       - name: Build For Windows
         run: |
@@ -80,22 +89,28 @@ jobs:
 
       - name: Upload Artifacts MacOS Intel
         uses: actions/upload-artifact@v2
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && runner.arch == 'X64'
         with:
           name: yak_darwin_amd64
           path: ./yak_darwin_amd64
   
       - name: Upload Artifacts MacOS Apple Scilicon
         uses: actions/upload-artifact@v2
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && runner.arch == 'ARM64'
         with:
           name: yak_darwin_arm64
           path: ./yak_darwin_arm64
 
-
       - name: Upload Artifacts Linux
         uses: actions/upload-artifact@v2
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && runner.arch == 'X64'
         with:
           name: yak_linux_amd64
           path: ./yak_linux_amd64
+
+      - name: Upload Artifacts Linux Arm
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'Linux' && runner.arch == 'ARM64'
+        with:
+          name: yak_linux_arm64
+          path: ./yak_linux_arm64
