--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,9 @@ jobs:
         os:
           - windows-latest
           - macos-latest
+          - macos-arm
           - ubuntu-20.04
+          - ubuntu-20.04-arm
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -58,17 +60,22 @@ jobs:
       - name: Build For Linux
         run: |
           go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && runner.arch == 'X64'
+      
+      - name: Build For Linux Arm
+        run: |
+          go build -ldflags "-linkmode external -extldflags '-static' -s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
+        if: runner.os == 'Linux' && runner.arch == 'ARM64'
 
       - name: Build For MacOS Intel
         run: |
           CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && runner.arch == 'X64'
 
       - name: Build For MacOS Apple Scilicon
         run: |
           CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build -ldflags "-s -w -X 'main.goVersion=$(go version)' -X 'main.gitHash=$(git show -s --format=%H)' -X 'main.buildTime=$(git show -s --format=%cd)' -X 'main.yakVersion=${{ steps.fetchtag.outputs.value }}'" -o "./yak_$(go env GOOS)_$(go env GOARCH)" -v common/yak/cmd/yak.go
-        if: runner.os == 'macOS'  
+        if: runner.os == 'macOS' && runner.arch == 'ARM64' 
         
       - name: Build For Windows
         run: |
@@ -85,24 +92,31 @@ jobs:
 
       - name: Upload Artifacts MacOS Intel
         uses: actions/upload-artifact@v2
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && runner.arch == 'X64'
         with:
           name: yak_darwin_amd64
           path: ./yak_darwin_amd64
 
       - name: Upload Artifacts MacOS Apple Scilicon
         uses: actions/upload-artifact@v2
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && runner.arch == 'ARM64'
         with:
           name: yak_darwin_arm64
           path: ./yak_darwin_arm64
 
       - name: Upload Artifacts Linux
         uses: actions/upload-artifact@v2
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && runner.arch == 'X64'
         with:
           name: yak_linux_amd64
           path: ./yak_linux_amd64
+
+      - name: Upload Artifacts Linux Arm
+        uses: actions/upload-artifact@v2
+        if: runner.os == 'Linux' && runner.arch == 'ARM64'
+        with:
+          name: yak_linux_arm64
+          path: ./yak_linux_arm64
 
   download_artifacts_and_release:
     #    if: ${{ startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/ci/') }}
@@ -141,6 +155,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: yak_linux_amd64
+      - name: Download Linux Arm YAK
+        uses: actions/download-artifact@v2
+        with:
+          name: yak_linux_arm64
       # download yakit
       #      - name: Download Yakit (Darwin Arm64)
       #        uses: actions/download-artifact@v2
@@ -185,10 +203,12 @@ jobs:
             yak_windows_amd64.exe:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_windows_amd64.exe
             yak_linux_amd64:/yak/latest/yak_linux_amd64
             yak_linux_amd64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_linux_amd64
+            yak_linux_arm64:/yak/latest/yak_linux_arm64
+            yak_linux_arm64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_linux_arm64
             yak_darwin_amd64:/yak/latest/yak_darwin_amd64
             yak_darwin_amd64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_darwin_amd64
-            yak_darwin_amd64:/yak/latest/yak_darwin_arm64
-            yak_darwin_amd64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_darwin_arm64
+            yak_darwin_arm64:/yak/latest/yak_darwin_arm64
+            yak_darwin_arm64:/yak/${{ steps.fetchtag_release.outputs.value }}/yak_darwin_arm64
       #      - name: Upload Yakit to oss(MacOS m1)
       #        uses: tvrcgo/upload-to-oss@master
       #        with:
@@ -267,6 +287,16 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./yak_linux_amd64
           asset_name: yak_linux_amd64
+          asset_content_type: application/octet-stream
+
+      - name: Upload Release Asset Linux Arm Yak
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./yak_linux_arm64
+          asset_name: yak_linux_arm64
           asset_content_type: application/octet-stream
 
       - name: Upload Release Asset macOS Intel
