--- a/.github/workflows/generate-web-doc-test.yml
+++ b/.github/workflows/generate-web-doc-test.yml
@@ -15,8 +15,7 @@ jobs:
 
     - name: Install libpcap (Linux)
       run: |
-        sudo apt-get update
-        sudo apt-get install libpcap-dev=1.9.1-3
+        sudo apt-get update && sudo apt-get install libpcap-dev=1.9.1-3
 
     - name: Generate docs
       run: |
