--- a/.github/workflows/generate-web-doc.yml
+++ b/.github/workflows/generate-web-doc.yml
@@ -3,12 +3,14 @@ name: Push web docs
 on:
   push:
     branches:
-      - "feat/doc/fun_sign_upgrade"
+      - "ci/*"
+    tags:
+      - "v*"
 
 jobs:
   build:
+    if: ${{ startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/ci/') }}
     runs-on: ubuntu-20.04
-
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
