--- a/.github/workflows/reuse-build.yml
+++ b/.github/workflows/reuse-build.yml
@@ -10,8 +10,8 @@ on:
         options:
           - windows
           - windows7
-          - macos-amd64 
-          - macos-arm64
+          - darwin-amd64 
+          - darwin-arm64
           - linux-amd64
           - linux-arm64
       ee:
@@ -57,7 +57,7 @@ jobs:
           echo "YAK_TAG=$(cat tags.txt)" >> ${{ contains(inputs.os, 'windows') && '$env:GITHUB_ENV' || '$GITHUB_ENV' }} 
 
       - name: Download CrossBuild GCC(Linux x64 / MacOS x64)
-        if: inputs.os == 'linux-amd64' || inputs.os == 'macos-amd64'
+        if: inputs.os == 'linux-amd64' || inputs.os == 'darwin-amd64'
         run: |
           brew tap messense/macos-cross-toolchains
           brew install x86_64-unknown-linux-gnu
