fix(ci): fix ssa test name and modify ci

--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -125,6 +125,10 @@ jobs:
               go test -timeout 60s ./common/yak/JS2ssa/...
               # Test go syntax
               go test -timeout 30s ./common/yak/go2ssa/...
+              # Test grpc SyntaxFlow
+              go test -timeout 5m -run TestGRPCMUSTPASS_SyntaxFlow* ./common/yakgrpc/...
+              # Test grpc Ssa
+              go test -timeout 1m -run TestGRPCMUSTPASS_SSA* ./common/yakgrpc/...
           - name: Test SyntaxFlow Web Server
               go test -timeout 20s ./common/sfweb/...
 
@@ -153,9 +157,6 @@ jobs:
           - name: Test gRPC MUSTPASS Language
             run: go test -timeout 5m -run TestGRPCMUSTPASS_LANGUAGE* ./common/yakgrpc/...
 
-          - name: Test gRPC MUSTPASS SyntaxFlow
-            run: go test -timeout 5m -run TestGRPCMUSTPASS_SyntaxFlow* ./common/yakgrpc/...
-
           - name: Test gRPC MUSTPASS COMMON
             run: go test -timeout 5m -run TestGRPCMUSTPASS_COMMON* ./common/yakgrpc/...
 
@@ -163,7 +164,7 @@ jobs:
             run: go test -timeout 2m -run TestLARGEGRPCMUSTPASS ./common/yakgrpc/...
 
           - name: Test gRPC Other
-            run: go test -timeout 6m -skip "^(TestGRPCMUSTPASS_HTTP_|TestGRPCMUSTPASS_MITM_|TestGRPCMUSTPASS_HTTPFuzzer|TestGRPCMUSTPASS_LANGUAGE|TestGRPCMUSTPASS_COMMON|TestLARGEGRPCMUSTPASS|TestGRPCMUSTPASS_SyntaxFlow)" ./common/yakgrpc/...
+            run: go test -timeout 6m -skip "^(TestGRPCMUSTPASS_HTTP_|TestGRPCMUSTPASS_MITM_|TestGRPCMUSTPASS_HTTPFuzzer|TestGRPCMUSTPASS_LANGUAGE|TestGRPCMUSTPASS_COMMON|TestLARGEGRPCMUSTPASS|TestGRPCMUSTPASS_SyntaxFlow|TestGRPCMUSTPASS_SSA)" ./common/yakgrpc/...
 
           - name: Test Vulinbox SQL Injection
             run: go test -timeout 5m -run TestGRPCMUSTPASS_SQL ./common/coreplugin
@@ -223,7 +224,7 @@ jobs:
           - name: Test FP Scan
             run: |
               go test --timeout 30s ./common/fp/...
-          - name: Test cmd 
+          - name: Test cmd
             run: |
               go test --timeout 30s ./common/yak/cmd/...
           - name: Test Java Decompiler
