--- a/.github/workflows/exp-cross-build.yml
+++ b/.github/workflows/exp-cross-build.yml
@@ -113,6 +113,7 @@ jobs:
       - name: Download CrossBuild GCC(Linux x64)
         if: matrix.os == 'linux-amd64'
         run: |
+          brew unlink pkg-config@0.29.2
           brew tap messense/macos-cross-toolchains
           brew install x86_64-unknown-linux-gnu
           x86_64-linux-gnu-gcc -v
@@ -120,6 +121,7 @@ jobs:
       - name: Download CrossBuild GCC(Linux arm64)
         if: matrix.os == 'linux-arm64'
         run: |
+          brew unlink pkg-config@0.29.2
           brew tap messense/macos-cross-toolchains
           brew install aarch64-unknown-linux-gnu
           aarch64-linux-gnu-gcc -v
