--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -84,8 +84,8 @@ jobs:
               go test -timeout 20s ./common/twofa/...
               # cybertunnel http trigger
               go test ./common/cybertunnel/...
-              # YAK GIT DIFF
-              go test ./common/utils/yakgit/yakdiff/...
+              # YAK GIT
+              go test ./common/utils/yakgit/...
               # YAK suspect tools
               go test ./common/utils/suspect
               # Jar Checking
