--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -67,6 +67,7 @@ jobs:
               go test -timeout 1m ./common/utils
               go test -timeout 10s ./common/utils/xml2
               go test -timeout 20s ./common/utils/tlsutils/... 
+              go test -timeout 20s ./common/utils/pprofutils/... 
               go test -timeout 20s -run TestQueryCVEWithFixName ./common/cve
               go test -timeout 20s ./common/sca/...
               go test -timeout 20s -run TestMUSTPASS_YakitLog ./common/yak/yaklib
