refactor(github-action):cross build use update syntaxflow workflow

--- a/.github/workflows/exp-cross-build.yml
+++ b/.github/workflows/exp-cross-build.yml
@@ -280,68 +280,11 @@ jobs:
             yak_darwin_arm64.sha256.txt
 
       - name: Generate SyntaxFlow Meta Info
-        run: |
-          echo "::group::Generate SyntaxFlow Meta Info"
-          
-          echo "Current working directory: $(pwd)"
-          echo "YAK_TAG version: ${{ env.YAK_TAG }}"
-          
-          echo "Downloading latest syntaxflow rule info..."
-          wget -O syntaxflow-meta.json https://aliyun-oss.yaklang.com/yak/latest/syntaxflow-meta.json
-          if [ $? -ne 0 ]; then
-            echo "::error::Failed to download syntaxflow meta info, empty file will create it "
-          fi
-          
-          if [ -f "scripts/summary-syntaxflow-meta.yak" ]; then
-            echo "Using local syntaxflow meta info generator"
-            cp scripts/summary-syntaxflow-meta.yak summary-syntaxflow-meta.yak
-          else
-            echo "Downloading syntaxflow meta info generator..."
-            wget -O summary-syntaxflow-meta.yak https://aliyun-oss.yaklang.com/syntaxflow/summary-syntaxflow-meta.yak
-            if [ $? -ne 0 ]; then
-              echo "::error::Failed to download syntaxflow meta info generator"
-              exit 1
-            fi
-          fi
-          
-          echo "Checking downloaded file..."
-          ls -l  | grep syntaxflow
-          
-          echo "Generating meta info with yak script..."
-          ./yak_linux_amd64 ./summary-syntaxflow-meta.yak \
-            --output syntaxflow-meta.json \
-            --version ${{ env.YAK_TAG }} \
-            --custom-ai \
-            --ai-type chatglm \
-            --apikey ${{ secrets.CHATGLM_APIKEY }} \
-            --ai-model glm-4 \
-            --concurrent 5
-          
-          echo "Checking generated files..."
-          ls -l | grep syntaxflow
-          
-          echo "Uploading to versioned OSS path..."
-          ./yak_linux_amd64 upload-oss \
-            -f "syntaxflow-meta.json:/yak/${{ env.YAK_TAG }}/syntaxflow-meta.json" \
-            -ak ${{ secrets.OSS_KEY_ID }} \
-            -sk ${{ secrets.OSS_KEY_SECRET }} \
-            -t 5
-          if [ $? -ne 0 ]; then
-            echo "::warning::Failed to upload versioned meta info"
-          fi
-          
-          echo "Uploading to latest OSS path..."
-          ./yak_linux_amd64 upload-oss \
-            -f "syntaxflow-meta.json:/yak/latest/syntaxflow-meta.json" \
-            -ak ${{ secrets.OSS_KEY_ID }} \
-            -sk ${{ secrets.OSS_KEY_SECRET }} \
-            -t 5
-          if [ $? -ne 0 ]; then
-            echo "::warning::Failed to upload latest meta info"
-          fi
-          
-          echo "::endgroup::"
-        continue-on-error: true
+        uses: ./.github/workflows/update-syntaxflow-meta.yml
+        with:
+          update_version: ${{ env.YAK_TAG }}
+          update_last: true
+        secrets: inherit
 
       - name: Build Docker Image(Tag)
         run: |
