--- a/.github/workflows/update-syntaxflow-meta.yml
+++ b/.github/workflows/update-syntaxflow-meta.yml
@@ -3,10 +3,14 @@ name: Update Syntaxflow meta
 on:
   workflow_dispatch:
     inputs:
-      publish_version:
-        description: "Version to publish (e.g. v1.3.0)"
+      update_version:
+        description: "Version to update (e.g. 1.3.0-beta1)"
         type: string
         required: true
+      update_last:
+        description: "Update last syntaxflow meta or not"
+        type: boolean
+        default: false
 
 
 jobs:
@@ -16,15 +20,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Get Yak binary Lastest
+      - name: Get Yak binary Latest
         run: |
           wget https://aliyun-oss.yaklang.com/yak/latest/yak_linux_amd64
           pwd && ls -lh && chmod +x ./yak_linux_amd64
 
-
       - name: Get Repo tags
         run: |
-          VERSION_INPUT="${{ github.event.inputs.publish_version }}"
+          VERSION_INPUT="${{ github.event.inputs.update_version }}"
           echo "YAK_TAG=$YAK_VERSION" >> $GITHUB_ENV 
 
       - name: Checkout Tags Version
@@ -72,25 +75,27 @@ jobs:
           echo "Checking generated files..."
           ls -l | grep syntaxflow
           
-          # echo "Uploading to versioned OSS path..."
-          # ./yak_linux_amd64 upload-oss \
-          #   -f "syntaxflow-meta.json:/yak/${{ env.YAK_TAG }}/syntaxflow-meta.json" \
-          #   -ak ${{ secrets.OSS_KEY_ID }} \
-          #   -sk ${{ secrets.OSS_KEY_SECRET }} \
-          #   -t 5
-          # if [ $? -ne 0 ]; then
-          #   echo "::warning::Failed to upload versioned meta info"
-          # fi
+          echo "Uploading to versioned OSS path..."
+          ./yak_linux_amd64 upload-oss \
+           -f "syntaxflow-meta.json:/yak/${{ env.YAK_TAG }}/syntaxflow-meta.json" \
+           -ak ${{ secrets.OSS_KEY_ID }} \
+           -sk ${{ secrets.OSS_KEY_SECRET }} \
+           -t 5
+          if [ $? -ne 0 ]; then
+           echo "::warning::Failed to upload versioned meta info"
+          fi
           
-          # echo "Uploading to latest OSS path..."
-          # ./yak_linux_amd64 upload-oss \
-          #   -f "syntaxflow-meta.json:/yak/latest/syntaxflow-meta.json" \
-          #   -ak ${{ secrets.OSS_KEY_ID }} \
-          #   -sk ${{ secrets.OSS_KEY_SECRET }} \
-          #   -t 5
-          # if [ $? -ne 0 ]; then
-          #   echo "::warning::Failed to upload latest meta info"
-          # fi
+          if [ ${{ github.event.inputs.update_last }} == true ]; then
+              echo "Uploading to latest OSS path..."
+              ./yak_linux_amd64 upload-oss \
+               -f "syntaxflow-meta.json:/yak/latest/syntaxflow-meta.json" \
+               -ak ${{ secrets.OSS_KEY_ID }} \
+               -sk ${{ secrets.OSS_KEY_SECRET }} \
+               -t 5
+              if [ $? -ne 0 ]; then
+               echo "::warning::Failed to upload latest meta info"
+              fi
+          fi
           
           echo "::endgroup::"
         continue-on-error: true
