--- a/.github/workflows/diff-code-check.yml
+++ b/.github/workflows/diff-code-check.yml
@@ -8,7 +8,8 @@ on:
       - synchronize
       - reopened
     paths:
-      - .github/workflows/diff-code-check.yml
+      - ".github/workflows/diff-code-check.yml"
+      - "common/**"
 jobs:
   setup:
     runs-on: ubuntu-20.04
@@ -44,7 +45,7 @@ jobs:
         with:
           packages: libpcap-dev
           version: 1.9.1-3
-#      - name: Download From oos
+      #      - name: Download From oos
       #        run: |
       #          wget https://aliyun-oss.yaklang.com/yak/latest/yak_linux_amd64
       #          chmod +x ./yak_linux_amd64
