fix(antlr): add go antlr test

--- a/.github/workflows/essential-tests.yml
+++ b/.github/workflows/essential-tests.yml
@@ -133,6 +133,7 @@ jobs:
               go test -timeout 60s ./common/yak/JS2ssa/...
               # Test go syntax
               go test -timeout 30s ./common/yak/go2ssa/...
+              go test -timeout 30s ./common/yak/antlr4go/...
 
           - name: Test SyntaxFlow Web Server
               go test -timeout 20s ./common/sfweb/...
